--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <li>- Категоризација Града као туристичког места</li>
 		  <li>- Израда нацрта одлуке о боравишној такси</li>
 		  <li>- Вођење управног поступка</li>
-		  <li>- Категоризација објеката приватног смештаја, вођење евиденције о категорисаном смештају и достава података, у складу са законом</li>
+		  <li>- Категоризација објеката приватног смештаја, вођење евиденције о категорисаном смештају и достава података, у складу са Законом</li>
 		  <li>- Израда нацрта општих и појединачних аката које доносе Скупштина и извршни органи Града</li>
         </ul>
 	  </div>
