--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 	  	<ul class="dropdown3">
 		  <li><a class="dropa3" onclick="myFunction3()">Категорисани угоститељски објекти&nbsp;&nbsp;<i class="fas fa-chevron-down" style="pointer-events: none;"></i></a>
 		    <ul class="dropdown-content3" id="myDropdown3">
-		      <li><a href="dokumenti/InfOKateg.pdf" target="_blank">Информатор о категоризацији</a></li>
+			  <li><a href="dokumenti/ZbirnoKateg.pdf" target="_blank">Збирна евиденција</a></li>
+		      <li><a href="dokumenti/InfOKateg.pdf" target="_blank">Информатор о категоризацији</a></li>			  
 		      <li><a href="dokumenti/PodnZahtKatDokFizLice.pdf" target="_blank">Подношење захтева за категоризацију - физичко лице</a></li>
 			  <li><a href="dokumenti/PodnZahtKatDokPrLice.pdf" target="_blank">Подношење захтева за категоризацију - правно лице</a></li>
 			  <li><a href="dokumenti/VodicKatFizLice.pdf" target="_blank">Водич - категоризација - физичко лице</a></li>
@@ -83,6 +84,7 @@
 		<ul class="dropdown4">
 		  <li><a class="dropa4" onclick="myFunction4()">Некатегорисани угоститељски објекти&nbsp;&nbsp;<i class="fas fa-chevron-down" style="pointer-events: none;"></i></a>
 		    <ul class="dropdown-content4" id="myDropdown4">
+			  <li><a href="dokumenti/ZbirnoNekateg.pdf" target="_blank">Збирна евиденција</a></li>
 		      <li><a href="dokumenti/Prilog1.xlsx">Прилог 1 - Пријава угоститеља за некатегор. угост. објекат</a></li>
 		      <li><a href="dokumenti/ZahtUverNekateg.pdf" target="_blank">Захтев за издавање уверења</a><li>
 			  <li><a href="dokumenti/TakseNekateg.pdf" target="_blank">Таксе</a><li>
