--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 		    <ul class="dropdown-content" id="myDropdown">
 		      <li><a class="covid" href="https://covid19.rs/" target="_blank">COVID 19</a></li>
 			  <li><a href="https://www.eturista.gov.rs/" target="_blank">еТуриста</a></li>
-		      <li><a href="https://mtt.gov.rs/tekst/29693/vauceri-za-odmor-u-srbiji.php" target="_blank">Ваучери за одмор у Србији</a></li>
+		      <li><a href="https://mto.gov.rs/tekst/93/vauceri-za-odmor-u-srbiji.php" target="_blank">Ваучери за одмор у Србији</a></li>
+			  <li><a href="dokumenti/ResMinKategGrada.pdf" target="_blank">Решење Министарства туризма и омладине о категоризацији Града Ниша као туристичког места</a></li>
 		    </ul>
 		  </li>
 		</ul>
