--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
 		</ul>
 	  </div>
 	  <div class="poslovi">
-	    <h3 id="odsek1">ОДСЕК ЗА</h3>
-	    <h3 id="odsek2"><i class="fas fa-suitcase"></i>&nbsp;&nbsp;ТУРИЗАМ И РОБНЕ РЕЗЕРВЕ&nbsp;&nbsp;<i class="fas fa-shopping-bag"></i></h3>
+	    <h3 id="odsek1">ОДСЕК ЗА ТУРИЗАМ</h3>
 	    <ul id="posl">
           <li>- Управни надзор над законитошћу рада и аката организација у области туризма чији је оснивач Град</li>
           <li>- Прикупљање и обрада података за израду стратегија, програма, планова и пројеката развоја туризма</li>
