--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <h1>ГРАД НИШ</h1>
-      <h2>ГРАДСКА УПРАВА ЗА ИМОВИНУ И ОДРЖИВИ РАЗВОЈ</h2>
+      <h2>ГРАДСКА УПРАВА ЗА ИМОВИНУ, ПРИВРЕДУ И ЗАШТИТУ ЖИВОТНЕ СРЕДИНЕ</h2>
 	  <div class="presl">
 	    <a href="#" class="cyr">ЋИР</a>
         <a href="#" class="lat">LAT</a>
@@ -125,7 +125,7 @@
 	  <p id="adresa"><i class="fas fa-home"></i>&nbsp;&nbsp;Ниш, Николе Пашића 24, 4. спрат, канцеларија 128А</p>
 	  <p id="brtel"><i class="fas fa-phone"></i>&nbsp;&nbsp;<a class="tellink" href="tel:+38118504454">+381 18 504454</a>&nbsp;,&nbsp;<a class="tellink" href="tel:+38118504650">+381 18 504650</a></p>
 	  <p id="mail"><i class="far fa-envelope"></i>&nbsp;&nbsp;<a class="maillink" href="mailto:privreda@gu.ni.rs">privreda@gu.ni.rs</a>&nbsp;,&nbsp;<a class="maillink" href="mailto:info.privreda.nis@gmail.com">info.privreda.nis@gmail.com</a></p><br>
-      <p id="kraj">&copy; Град Ниш, Одсек за туризам 2024</p> 
+      <p id="kraj">&copy; Град Ниш, Одсек за туризам 2025</p> 
     </footer>
               
   </body>
