--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         var CyrLat = new CyrLatConverter('body').init({
           onClickCyr: '.cyr',
           onClickLat: '.lat',
-		  ignoreClasses: ['cyr', 'lat', 'covid', 'email', 'maillink']
+		  ignoreClasses: ['cyr', 'lat', 'email', 'maillink']
         });
 	  </script>
 	</header>
@@ -37,8 +37,7 @@
 	    <ul class="dropdown">
 	      <li><a class="dropa" onclick="myFunction()">Актуелно&nbsp;&nbsp;<i class="fas fa-chevron-down" style="pointer-events: none;"></i></a>
 		    <ul class="dropdown-content" id="myDropdown">
-		      <li><a class="covid" href="https://covid19.rs/" target="_blank">COVID 19</a></li>
-			  <li><a href="https://www.eturista.gov.rs/" target="_blank">еТуриста</a></li>
+		      <li><a href="https://www.eturista.gov.rs/" target="_blank">еТуриста</a></li>
 		      <li><a href="https://mto.gov.rs/tekst/93/vauceri-za-odmor-u-srbiji.php" target="_blank">Ваучери за одмор у Србији</a></li>
 			  <li><a href="dokumenti/ResMinKategGrada.pdf" target="_blank">Решење Министарства туризма и омладине о категоризацији Града Ниша као туристичког места</a></li>
 		    </ul>
